# activation_oracles

./: .gitignore  README.md  api_interp.py  eval_trained_model.py  pyproject.toml  requirements.txt  self_interp.py  self_interp_dev.py  self_training.py  test_setup.py  vllm_demo.py  vllm_test.py
datasets/latentqa_datasets/: curate_gpt_data.py  prompts.py
experiments/: classification_eval.py  em_open_ended_eval.py  judge_open_ended_quirk.py  linear_probe.py  personaqa_all_persona_yes_no_eval.py  personaqa_attribute_stats.py  personaqa_yes_no_full_eval.py  plot_classification_eval.py  plot_gender_eval_results.py  plot_secret_keeping_results.py  plot_single_personaqa_results.py  plot_ssc_results.py  plot_taboo_eval_results.py  simple_abhay_model_demo.py  view_data.py
experiments/backdoors/: hf_sft.py
experiments/final_paper_plots/: plot_all_data_diversity.py  plot_classification_eval_all_models.py  plot_classification_layer_sweep_lines.py  plot_gender_eval_results.py  plot_layer_comparison_secret_keeping.py  plot_model_progression_line_chart_shapes.py  plot_personaqa_knowledge_eval_all_models.py  plot_personaqa_results_all_models.py  plot_secret_keeping_results.py  plot_ssc_results.py  shared_color_mapping.py
experiments/oracle_guided_patching/: __init__.py  gradient_steering.py  misalignment_experiment.py  oracle_forward.py  perturbation.py  saved_delta.pt  test_gradient_flow.py
interp_tools/: introspect_utils.py  model_utils.py
nl_probes/: linear_probe.py  sft.py  single_token_only_sft.py
nl_probes/utils/: common.py  (+4 more)
tests/: test_peft.py  test_positions.py
(+23 files in other folders)
