[project]
name = "nl_probes"
version = "0.0.1"
description = "nl_probes"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic",
    "wandb",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "openai",
    "pandas",
    "einops",
    "circuitsvis>=1.43.3",
    "jaxtyping",
    "accelerate",
    "datasets==3.6.0", # breaking change in 4.0.0 for trust remote code
    "huggingface-hub",
    "matplotlib",
    "torch==2.7.0",
    "numpy",
    "transformers==4.51.1",
    "vllm>=0.9.1",
    "slist",
    "anthropic",
    "tenacity",
    "rapidfuzz",
    "peft==0.17.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nl_probes", "nl_probes.*"]
